# IndieStudio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/models/: bigbomb.b3d  bomb.b3d  doublebomb.b3d  head.b3d  pot.b3d  rock.b3d  rock2.b3d  shield.b3d  slowboot.b3d  speedboot.b3d  water.b3d
engine/: Makefile
engine/include/: Game.hpp  IndieRandom.hpp
engine/include/component/: Lifespan.hpp  Script.hpp  SoundFX.hpp
engine/include/ecs/: ASystem.hpp  Component.hpp  ComponentManager.hpp  ComponentMap.hpp  Entity.hpp  EntityManager.hpp  Scene.hpp
engine/include/event/: EntityRemove.hpp  EventBus.hpp  EventHandler.hpp  IEvent.hpp
engine/include/exception/: AssetNotFound.hpp  IndieException.hpp
engine/include/irrlicht/: Camera.hpp  Object3d.hpp  ParticleFX.hpp  RigidBody.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Window.hpp
engine/include/irrlicht/event/: EventReceiver.hpp  KeyInput.hpp  MouseClick.hpp
engine/include/raylib/: Audio.hpp  Text.hpp
engine/include/sfml/: Music.hpp  Sound.hpp
engine/include/system/: SystemLifespan.hpp  SystemScript.hpp
engine/src/: Game.cpp
engine/src/component/: Script.cpp  SoundFX.cpp
engine/src/ecs/: ASystem.cpp  Component.cpp  ComponentMap.cpp  EntityManager.cpp  Scene.cpp
engine/src/event/: EntityRemove.cpp
engine/src/irrlicht/: Camera.cpp  Object3d.cpp  RigidBody.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Window.cpp
engine/src/irrlicht/event/: EventReceiver.cpp  KeyInput.cpp  MouseClick.cpp
engine/src/raylib/: Audio.cpp  Window.cpp
engine/src/raylib/event/: MouseClick.cpp
engine/src/sfml/: Music.cpp  Sound.cpp
engine/src/system/: SystemLifespan.cpp  SystemScript.cpp
indie/include/: MapConvert.hpp  Position.hpp  Settings.hpp  Vector4.hpp
indie/include/component/: Actor.hpp  Controller.hpp  Destroyable.hpp  Powerup.hpp
indie/include/scene/: SceneGame.hpp  Scenes.hpp
indie/include/scene/characters/: ACharacter.hpp  Link.hpp  Tetra.hpp
indie/include/scene/entities/: Bomb.hpp  BombExploseEvent.hpp  BombScript.hpp  Head.hpp  MapScript.hpp  Player.hpp  Pot.hpp  Powerups.hpp  Rock.hpp
indie/include/system/: SystemController.hpp  SystemPowerup.hpp  SystemSprite.hpp
indie/include/ui/: Button.hpp  ButtonClick.hpp  Pause.hpp  ScriptKeybind.hpp  SystemButton.hpp  SystemText.hpp
indie/src/: Game.cpp  MapConvert.cpp  Position.cpp  Settings.cpp
indie/src/component/: Actor.cpp  Controller.cpp  Destroyable.cpp
indie/src/scene/: SceneDevRoom.cpp  SceneFinal.cpp  SceneGame.cpp  SceneMenu.cpp  SceneSettings.cpp  SceneSplash.cpp
indie/src/scene/characters/: Link.cpp  Tetra.cpp
indie/src/scene/entities/: Bomb.cpp  BombScript.cpp  Head.cpp  MapScript.cpp  Player.cpp  Pot.cpp  Powerup.cpp  Rock.cpp
indie/src/system/: SystemController.cpp  SystemPowerup.cpp  SystemSprite.cpp
indie/src/ui/: Button.cpp  ButtonClick.cpp  Pause.cpp  ScriptKeybind.cpp  SystemButton.cpp  SystemText.cpp
map/include/: Map.hpp  MapException.hpp
map/src/: Map.cpp  MapException.cpp
